<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue69">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/gym_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/text_home_gym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:text="@string/home_gym"
                android:layout_centerHorizontal="true"
                app:fontFamily="@font/gym"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textAlignment="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_home_gym"
                android:layout_marginHorizontal="60dp"
                app:fontFamily="@font/gym"
                android:layout_marginTop="30dp"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/ivanov"
                    android:textColor="@color/blue69"
                    android:inputType="textPersonName"
                    app:fontFamily="@font/gym"
                    android:paddingHorizontal="20dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableTint="@color/gray"
                    android:drawablePadding="25dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eLogin"
                android:layout_marginHorizontal="60dp"
                app:fontFamily="@font/gym"
                android:layout_marginTop="30dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/password"
                    android:textColor="@color/blue69"
                    android:inputType="textPassword"
                    app:fontFamily="@font/gym"
                    android:paddingHorizontal="20dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/gray"
                    android:drawablePadding="25dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ePassword"
                app:fontFamily="@font/gym"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/error"/>

            <Button
                android:id="@+id/sign_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/errorLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_rounded"
                android:text="@string/sing_in"
                android:textColor="@color/blue69"
                android:textSize="18sp"
                app:fontFamily="@font/gym"
                android:focusable="true"
                android:clickable="true"
                android:enabled="true"
                android:onClick="signIn"/>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/sing_up"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                app:fontFamily="@font/gym"
                android:focusable="true"
                android:clickable="true"
                android:enabled="true"
                android:onClick="signUp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>